# tree-sitter-kieli

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-kieli.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kieli/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKieli/: kieli.h
bindings/swift/TreeSitterKieliTests/: TreeSitterKieliTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  definitions.txt  literals.txt  patterns.txt  types.txt
