[package]
name = "tree-sitter-kieli"
description = "Kieli grammar for tree-sitter"
version = "0.1.0"
authors = ["aattoa <aattoa@proton.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kieli"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/aattoa/tree-sitter-kieli"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
